@@ -43,6 +43,30 @@ begin_import
 import|import
 name|java
 operator|.
+name|lang
+operator|.
+name|management
+operator|.
+name|ManagementFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|lang
+operator|.
+name|management
+operator|.
+name|MemoryMXBean
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|net
 operator|.
 name|URLClassLoader
@@ -339,6 +363,23 @@ specifier|static
 name|boolean
 name|done
 decl_stmt|;
+comment|// used to log memory usage periodically
+specifier|private
+name|MemoryMXBean
+name|memoryMXBean
+decl_stmt|;
+specifier|private
+name|long
+name|numRows
+init|=
+literal|0
+decl_stmt|;
+specifier|private
+name|long
+name|nextCntr
+init|=
+literal|1
+decl_stmt|;
 specifier|public
 name|void
 name|configure
@@ -347,6 +388,29 @@ name|JobConf
 name|job
 parameter_list|)
 block|{
+comment|// Allocate the bean at the beginning -
+name|memoryMXBean
+operator|=
+name|ManagementFactory
+operator|.
+name|getMemoryMXBean
+argument_list|()
+expr_stmt|;
+name|l4j
+operator|.
+name|info
+argument_list|(
+literal|"maximum memory = "
+operator|+
+name|memoryMXBean
+operator|.
+name|getHeapMemoryUsage
+argument_list|()
+operator|.
+name|getMax
+argument_list|()
+argument_list|)
+expr_stmt|;
 try|try
 block|{
 name|l4j
@@ -755,6 +819,11 @@ operator|.
 name|getMapLocalWork
 argument_list|()
 decl_stmt|;
+name|int
+name|fetchOpNum
+init|=
+literal|0
+decl_stmt|;
 for|for
 control|(
 name|Map
@@ -773,6 +842,11 @@ name|entrySet
 argument_list|()
 control|)
 block|{
+name|int
+name|fetchOpRows
+init|=
+literal|0
+decl_stmt|;
 name|String
 name|alias
 init|=
@@ -829,6 +903,9 @@ condition|)
 block|{
 break|break;
 block|}
+name|fetchOpRows
+operator|++
+expr_stmt|;
 name|forwardOp
 operator|.
 name|process
@@ -838,6 +915,39 @@ operator|.
 name|o
 argument_list|,
 literal|0
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|l4j
+operator|.
+name|isInfoEnabled
+argument_list|()
+condition|)
+block|{
+name|l4j
+operator|.
+name|info
+argument_list|(
+literal|"fetch "
+operator|+
+name|fetchOpNum
+operator|++
+operator|+
+literal|" processed "
+operator|+
+name|fetchOpRows
+operator|+
+literal|" used mem: "
+operator|+
+name|memoryMXBean
+operator|.
+name|getHeapMemoryUsage
+argument_list|()
+operator|.
+name|getUsed
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -897,6 +1007,7 @@ operator|=
 literal|true
 expr_stmt|;
 else|else
+block|{
 comment|// Since there is no concept of a group, we don't invoke startGroup/endGroup for a mapper
 name|mo
 operator|.
@@ -908,6 +1019,58 @@ operator|)
 name|value
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|l4j
+operator|.
+name|isInfoEnabled
+argument_list|()
+condition|)
+block|{
+name|numRows
+operator|++
+expr_stmt|;
+if|if
+condition|(
+name|numRows
+operator|==
+name|nextCntr
+condition|)
+block|{
+name|long
+name|used_memory
+init|=
+name|memoryMXBean
+operator|.
+name|getHeapMemoryUsage
+argument_list|()
+operator|.
+name|getUsed
+argument_list|()
+decl_stmt|;
+name|l4j
+operator|.
+name|info
+argument_list|(
+literal|"ExecMapper: processing "
+operator|+
+name|numRows
+operator|+
+literal|" rows: used memory = "
+operator|+
+name|used_memory
+argument_list|)
+expr_stmt|;
+name|nextCntr
+operator|=
+name|getNextCntr
+argument_list|(
+name|numRows
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 block|}
 catch|catch
 parameter_list|(
@@ -955,6 +1118,33 @@ argument_list|)
 throw|;
 block|}
 block|}
+block|}
+specifier|private
+name|long
+name|getNextCntr
+parameter_list|(
+name|long
+name|cntr
+parameter_list|)
+block|{
+comment|// A very simple counter to keep track of number of rows processed by the reducer. It dumps
+comment|// every 1 million times, and quickly before that
+if|if
+condition|(
+name|cntr
+operator|>=
+literal|1000000
+condition|)
+return|return
+name|cntr
+operator|+
+literal|1000000
+return|;
+return|return
+literal|10
+operator|*
+name|cntr
+return|;
 block|}
 specifier|public
 name|void
@@ -1053,6 +1243,39 @@ name|abort
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+if|if
+condition|(
+name|l4j
+operator|.
+name|isInfoEnabled
+argument_list|()
+condition|)
+block|{
+name|long
+name|used_memory
+init|=
+name|memoryMXBean
+operator|.
+name|getHeapMemoryUsage
+argument_list|()
+operator|.
+name|getUsed
+argument_list|()
+decl_stmt|;
+name|l4j
+operator|.
+name|info
+argument_list|(
+literal|"ExecMapper: processed "
+operator|+
+name|numRows
+operator|+
+literal|" rows: used memory = "
+operator|+
+name|used_memory
+argument_list|)
+expr_stmt|;
 block|}
 name|reportStats
 name|rps
